--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Open+Sans:400,800&display=swap" rel="stylesheet">
     <title>Stocked.</title>
+    <link rel="icon" type="image/png" href="/src/assets/cutlery.png" />
   </head>
   <body>
     <div id="root"></div>
